--- a/packages/ui/src/components/select/SelectControl.astro
+++ b/packages/ui/src/components/select/SelectControl.astro
@@ -27,7 +27,7 @@ const {
 } = Astro.props as Props;
 
 const baseClasses =
-  "block w-full inline-flex items-center select appearance-none relative shadow-xs rounded-md bg-background ps-4 pe-10 py-2 text-sm text-foreground transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:border-ring disabled:cursor-not-allowed disabled:opacity-50 [&_option]:rounded-md [&_option]:p-2";
+  "block w-full inline-flex items-center select appearance-none relative shadow-xs rounded-md bg-background ps-4 pe-10 py-2 text-sm text-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:border-ring disabled:cursor-not-allowed disabled:opacity-50 [&_option]:rounded-md [&_option]:p-2";
 
 const selectControlVariants = cva(baseClasses, {
   variants: {
