--- a/packages/ui/src/components/card/CardTitle.astro
+++ b/packages/ui/src/components/card/CardTitle.astro
@@ -7,19 +7,11 @@ type Props = {
   class?: string;
 } & HTMLAttributes<"div">;
 
-const {
-  class: className = "",
-  ...rest
-} = Astro.props as Props;
+const { class: className = "", ...rest } = Astro.props as Props;
 
-const titleVariants = cva("leading-none font-medium text-lg text-balance");
+const titleVariants = cva("leading-none font-medium text-xl text-balance");
 ---
 
-<div
-  {...rest}
-  data-slot="card-title"
-  class={cn(titleVariants(), className)}
->
+<div {...rest} data-slot="card-title" class={cn(titleVariants(), className)}>
   <slot />
 </div>
-
