--- a/apps/web/src/pages/blocks/footers/footer-1/index.astro
+++ b/apps/web/src/pages/blocks/footers/footer-1/index.astro
@@ -1,15 +1,15 @@
 ---
 import BlockExampleLayout from "@/components/BlockExampleLayout.astro";
-import {
-  Footer,
-  FooterTop,
-  FooterMain,
-  FooterBottom,
-  FooterContainer,
-  FooterGrid,
-  FooterRow,
-  FooterLogo,
-} from "@bejamas/ui/components/footer";
+// import {
+//   Footer,
+//   FooterTop,
+//   FooterMain,
+//   FooterBottom,
+//   FooterContainer,
+//   FooterGrid,
+//   FooterRow,
+//   FooterLogo,
+// } from "../../../ui-next/footer";
 import {
   LinkGroup,
   LinkGroupTitle,
@@ -21,7 +21,7 @@ import { Button } from "@bejamas/ui/components/button";
 ---
 
 <BlockExampleLayout>
-  <Footer>
+  <!-- <Footer>
     <FooterTop>
       <FooterContainer>
         <div class="text-center py-10">
@@ -40,9 +40,7 @@ import { Button } from "@bejamas/ui/components/button";
             <LinkGroupTitle>Resources</LinkGroupTitle>
             <LinkGroupList>
               <LinkGroupItem><a href="/blog">Blog</a></LinkGroupItem>
-              <LinkGroupItem
-                ><a href="/docs">Documentation</a></LinkGroupItem
-              >
+              <LinkGroupItem><a href="/docs">Documentation</a></LinkGroupItem>
             </LinkGroupList>
           </LinkGroup>
           <LinkGroup>
@@ -99,5 +97,5 @@ import { Button } from "@bejamas/ui/components/button";
         </FooterLogo>
       </FooterContainer>
     </FooterBottom>
-  </Footer>
+  </Footer> -->
 </BlockExampleLayout>
