--- a/apps/web/src/pages/ui-demo.astro
+++ b/apps/web/src/pages/ui-demo.astro
@@ -2,10 +2,15 @@
 import BlockExampleLayout from "@/components/BlockExampleLayout.astro";
 import { Button } from "@bejamas/ui/components/button";
 import {
-  Dropdown,
-  DropdownTrigger,
-  DropdownContent,
-} from "@bejamas/ui/components/dropdown";
+  DropdownMenu,
+  DropdownMenuTrigger,
+  DropdownMenuContent,
+  DropdownMenuItem,
+  DropdownMenuGroup,
+  DropdownMenuLabel,
+  DropdownMenuSeparator,
+  DropdownMenuShortcut,
+} from "@bejamas/ui/components/dropdown-menu";
 import { StickySurface } from "@bejamas/ui/components/sticky-surface";
 import {
   Breadcrumb,
