--- a/apps/web/src/pages/blocks/navigation-headers/navbar-1.astro
+++ b/apps/web/src/pages/blocks/navigation-headers/navbar-1.astro
@@ -2,7 +2,16 @@
 import BlockExampleLayout from "@/components/BlockExampleLayout.astro";
 import { Button } from "@bejamas/ui/components/button";
 import NavigationMenu from "@/ui-next/NavigationMenu.astro";
-import { Dropdown, DropdownTrigger, DropdownContent } from "@bejamas/ui/components/dropdown";
+import {
+  DropdownMenu,
+  DropdownMenuTrigger,
+  DropdownMenuContent,
+  DropdownMenuItem,
+  DropdownMenuGroup,
+  DropdownMenuLabel,
+  DropdownMenuSeparator,
+  DropdownMenuShortcut,
+} from "@bejamas/ui/components/dropdown-menu";
 import { StickySurface } from "@bejamas/ui/components/sticky-surface";
 ---
 
@@ -28,9 +37,9 @@ import { StickySurface } from "@bejamas/ui/components/sticky-surface";
         <ul slot="links" class="flex items-center space-x-2">
           <li><Button as="a" href="/" variant="ghost">Home</Button></li>
           <li>
-            <Dropdown>
-              <DropdownTrigger>Company</DropdownTrigger>
-              <DropdownContent class="grid grid-cols-12 gap-2 w-120">
+            <DropdownMenu>
+              <DropdownMenuTrigger>Company</DropdownMenuTrigger>
+              <DropdownMenuContent class="grid grid-cols-12 gap-2 w-120">
                 <ul class="col-span-5">
                   <li>
                     <a
@@ -86,8 +95,8 @@ import { StickySurface } from "@bejamas/ui/components/sticky-surface";
                     class="w-full h-full object-cover absolute top-0 left-0 rounded-lg"
                   />
                 </div>
-              </DropdownContent>
-            </Dropdown>
+              </DropdownMenuContent>
+            </DropdownMenu>
           </li>
           <li>
             <Button as="a" href="/contact" variant="ghost">Contact</Button>
