feat(docs): add theme editor

--- a/apps/web/src/components/PageTitle.astro
+++ b/apps/web/src/components/PageTitle.astro
@@ -26,6 +26,7 @@ import {
 } from "@lucide/astro";
 
 import Icon from "./icons/Icon.astro";
+import ThemeEditorGlobal from "./theme-editor/ThemeEditorGlobal.astro";
 
 import config from "virtual:starlight-page-actions/config";
 
